--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"stylelint:fix": "stylelint --config .stylelintrc src --fix"
 	},
 	"dependencies": {
+		"@juliushaertl/vue-richtext": "^0.2.0",
 		"@nextcloud/auth": "^1.2.1",
 		"@nextcloud/axios": "^1.3.1",
 		"@nextcloud/dialogs": "^1.1.0",
